--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Big Picture by HTML5 UP</title>
+		<title>Sam Ramezanli Official</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -75,23 +75,30 @@
 			<section id="two" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Who I want</h2>
+						<h2>My Career</h2>
 					</header>
-					<p>I love to live healthy and happy. I love fighting for I desire </p>
+					<p>I'm very passionate about technology. Mobile app design
+					 and development is what interests me the most. I believe there is
+					  ALWAYS a better way to make a design simpler and thats why people like me 
+					  has a job. Many colleges have helped me in this path and I love to help
+					  others as well. If you're new in this field, maybe I can help you with 
+					  some of your questions and problems. </p>
 				</div>
-				<a href="#work" class="button style2 down anchored">Next</a>
+				<a href="#three" class="button style2 down anchored">Next</a>
 			</section>
 
 
 		<!-- Three -->
-			<section id="one" class="main style2 right dark fullscreen">
+			<section id="three" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
 						<h2>About Me</h2>
 					</header>
-					<p>I'm 6.2 feet guy, born and raised in Tehran, Iran. I pemanantly moved to US in 2011 and I'm currently a graduate student at Rutgers University. I have two bachelors in Electrical Engineering and Computer Science and my Masters is focused on User Experience design.</p>
+					<p>When I'm not on my laptop, I like to spend my time outdoors
+						making every second count. I love going into nature, jumping in a lake,
+						go on a Ski trip, join you on a fishing trip and play a game of soccer or Tennis. I've seen more than 15 countries and can share lots of stories with you. Also, I'm a huge soccer fan when I'm not busy with life.</p>
 				</div>
-				<a href="#two" class="button style2 down anchored">Next</a>
+				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
 
 		<!-- Work -->
@@ -168,7 +175,7 @@
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</footer>
