--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="#intro">Intro</a></li>
-							<li><a href="#one">What I Do</a></li>
-							<li><a href="#two">Who I Am</a></li>
-							<li><a href="#work">My Work</a></li>
+							<li><a href="#one">About Me</a></li>
+							<li><a href="#two">My Career</a></li>
+							<li><a href="#work">Hobbies</a></li>
 							<li><a href="#contact">Contact</a></li>
 						</ul>
 					</nav>
@@ -92,27 +92,26 @@
 			<section id="three" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>About Me</h2>
+						<h2>Hobbies</h2>
 					</header>
-					<p>When I'm not on my laptop, I like to spend my time outdoors
-						making every second count. I love going into nature, jumping in a lake,
+					<p>When I'm not on my laptop, I like to spend my time outdoors the lake,
 						go on a Ski trip, join you on a fishing trip and play a game of soccer or Tennis. I've seen more than 15 countries and can share lots of stories with you. Also, I'm a huge soccer fan when I'm not busy with life.</p>
 				</div>
-				<a href="#work" class="button style2 down anchored">Next</a>
+				<a href="#contact" class="button style2 down anchored">Next</a>
 			</section>
 
 		<!-- Work -->
-			<section id="work" class="main style3 primary">
+<!-- 			<section id="work" class="main style3 primary">
 				<div class="content container">
 					<header>
 						<h2>My Work</h2>
 						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
 						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
 						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
-					</header>
+					</header> -->
 
 					<!-- Lightbox Gallery  -->
-						<div class="container 75% gallery">
+<!-- 						<div class="container 75% gallery">
 							<div class="row 0% images">
 								<div class="6u"><a href="images/fulls/01.jpg" class="image fit from-left"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a></div>
 								<div class="6u"><a href="images/fulls/02.jpg" class="image fit from-right"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a></div>
@@ -129,13 +128,13 @@
 
 				</div>
 			</section>
-
+ -->
 		<!-- Contact -->
 			<section id="contact" class="main style3 secondary">
 				<div class="content container">
 					<header>
 						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+						<p>I like making new friends. If you like to get in touch with me, send me a message</p>
 					</header>
 					<div class="box container 75%">
 
