Updated with Tannaz

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <header>
             <h2>About Me</h2>
           </header>
-          <p>I'm 6.2 feet guy, born and raised in Tehran, Iran. I pemanantly moved to US in 2011 and I'm currently a graduate student at Rutgers University. I have two bachelors in Electrical Engineering and Computer Science and my Masters is focused on User Experience design.</p>
+          <p>I am a 6.2 feet guy, born and raised in Tehran, Iran. I pemanantly moved to US in 2011 and I'm currently a graduate student at Rutgers University. I have two bachelors, one in Electrical Engineering and one in Computer Science. My Masters is focused on User Experience Design.</p>
         </div>
         <a href="#two" class="button style2 down anchored">Next</a>
       </section>
@@ -77,12 +77,11 @@
           <header>
             <h2>My Career</h2>
           </header>
-          <p>I'm very passionate about technology. Mobile app design
-           and development is what interests me the most. I believe there is
-            ALWAYS a better way to make a design simpler and thats why people like me 
-            has a job. Many colleges have helped me in this path and I love to help
-            others as well. If you're new in this field, maybe I can help you with 
-            some of your questions and problems. </p>
+          <p>I'm very passionate about technology. Mobile Application design and development
+            is what interests me the most. I believe there is ALWAYS a better way to
+             make a simpler design; therefore, I am keen to make my designs simple and user friendly for
+              the target users. Many colleagues have helped me in this path and I love to help
+               others as well. If you're new in this field, maybe I can help you with some of your questions and problems. </p>
         </div>
         <a href="#three" class="button style2 down anchored">Next</a>
       </section>
@@ -94,8 +93,7 @@
           <header>
             <h2>Hobbies</h2>
           </header>
-          <p>When I'm not on my laptop, I like to spend my time outdoors the lake,
-            go on a Ski trip, join you on a fishing trip and play a game of soccer or Tennis. I've seen more than 15 countries and can share lots of stories with you. Also, I'm a huge soccer fan when I'm not busy with life.</p>
+          <p>When I'm not on my laptop, I like to spend my time outdoors. I'm very keen on sports and I believe a sensible balance between academics and outdoor activities such as hiking, kayaking, ski, soccer and others will help me maintain in sense of mental and physical. I am a sociable person who enjoys meeting and working with people. I've been in more than 15 countries and I can share many stories with you.</p>
         </div>
         <a href="#contact" class="button style2 down anchored">Next</a>
       </section>
