--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
         <div class="content container">
           <header>
             <h2>Say Hello.</h2>
-            <p>I like making new friends. If you like to get in touch with me, send me a message</p>
+            <p>I like making new friends. If you like to get in touch with me, send me a message at sam.ramezanli@rutgers.edu</p>
           </header>
-          <div class="box container 75%">
-
+<!--           <div class="box container 75%">
+ -->
           <!-- Contact Form -->
-              <form method="post" action="#">
+<!--               <form method="post" action="#">
                 <div class="row 50%">
                   <div class="6u"><input type="text" name="name" placeholder="Name" /></div>
                   <div class="6u"><input type="email" name="email" placeholder="Email" /></div>
@@ -153,7 +153,7 @@
                 </div>
               </form>
 
-          </div>
+          </div> -->
         </div>
       </section>
 
@@ -162,11 +162,11 @@
 
         <!-- Icons -->
           <ul class="actions">
-            <li><a href="twitter.com/samramez" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-            <li><a href="facebook.com/samramez" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-            <li><a href="plus.google.com/+SamRamezanli" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-            <li><a href="github.com/samramez" class="icon fa-github"><span class="label">Dribbble</span></a></li>
-            <li><a href="instagram.com/hapoojoon/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+            <li><a href="http://twitter.com/samramez" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+            <li><a href="http://facebook.com/samramez" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+            <li><a href="http://plus.google.com/+SamRamezanli" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
+            <li><a href="http://github.com/samramez" class="icon fa-github"><span class="label">Dribbble</span></a></li>
+            <li><a href="http://instagram.com/hapoojoon/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
           </ul>
 
         <!-- Menu -->
